# Metaheuristicas-SC

./: .gitignore  README.md
Practica1/K-NN/: three_NN.cpp
Practica1/random/: random.cpp
Practica2/: main.cpp
Practica2/Algorithms/: Algorithms.cpp  Algorithms.h  Functions.cpp
Practica3/: main.cpp
Practica3/Algorithms/: Algorithms.cpp  Algorithms.h
Practica3/FileReader/: FileReaderARFF.cpp
Practica3/K-NN/: three_NN.h
Practica5/: main.cpp
Practica5/Algorithms/: Algorithms.cpp  Algorithms.h  Functions.h
SeleccionCaracteristicas/: CMakeLists.txt  main.cpp
SeleccionCaracteristicas/Algorithms/: Algorithms.cpp  Algorithms.h  Functions.cpp  Functions.h
SeleccionCaracteristicas/FileReader/: FileReaderARFF.cpp  FileReaderARFF.h
SeleccionCaracteristicas/K-NN/: three_NN.cpp  three_NN.h  tres_NN.cpp  tres_NN.h
SeleccionCaracteristicas/Timer/: Timer.cpp  Timer.h
SeleccionCaracteristicas/Utils/: FileReaderARFF.cpp  FileReaderARFF.h  struct.h
